--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
       ddl-auto: none
@@ -20,11 +19,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yml
     enabled: true
-
   mail:
     host: smtp.gmail.com
     port: 587
@@ -37,6 +34,11 @@ spring:
           starttls:
             enable: true
             required: true
+  web:
+    encoding:
+      charset: UTF-8
+      force: true
+      enabled: true
 
 # Application Configuration
 app:
@@ -62,6 +64,14 @@ app:
 
   base-url: ${APP_BASE_URL:http://localhost:8080}
   frontend-url: ${APP_FRONTEND_URL:http://localhost:3000}
+  frontend-oauth-redirect: http://localhost:3000/auth/google/callback
+
+# Google config
+google:
+  oauth2:
+    client-id: ${GOOGLE_CLIENT_ID:your-google-client-id}
+    client-secret: ${GOOGLE_CLIENT_SECRET:your-google-client-secret}
+    redirect-uri: ${GOOGLE_REDIRECT_URI:http://localhost:8080/api/auth/google/callback}
 
 #logging:
 #  level:
