--- a/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.changelog-master.yml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changes/006-create-blacklisted-tokens-table.yml
   - include:
       file: db/changelog/changes/007-create-verification-tokens-table.yml
+  - include:
+      file: db/changelog/changes/008-modify-columns-charset.yml
