--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,11 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.13.0</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.security</groupId>-->
-        <!--            <artifactId>spring-security-saml2-service-provider</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.36.0</version>
+        </dependency>
     </dependencies>
 
     <build>
