--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,11 @@ spring:
       charset: UTF-8
       force: true
       enabled: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+      enabled: true
 
 # Application Configuration
 app:
@@ -74,6 +79,20 @@ google:
     client-id: ${GOOGLE_CLIENT_ID:your-google-client-id}
     client-secret: ${GOOGLE_CLIENT_SECRET:your-google-client-secret}
     redirect-uri: ${GOOGLE_REDIRECT_URI:http://localhost:8080/api/auth/google/callback}
+
+aws:
+  s3:
+    access-key: ${AWS_S3_ACCESS_KEY}
+    secret-key: ${AWS_S3_SECRET_KEY}
+    region: ${AWS_S3_REGION}
+    bucket-name: ${AWS_S3_BUCKET}
+    base-url: https://${AWS_S3_BUCKET}.s3.${AWS_S3_REGION}.amazonaws.com
+
+upload:
+  max-file-size: 10485760  # 10MB in bytes
+  max-request-size: 52428800  # 50MB
+  allowed-extensions: jpg,jpeg,png,gif,pdf,doc,docx,xls,xlsx,ppt,pptx,txt,zip,rar
+  allowed-image-extensions: jpg,jpeg,png,gif
 
 #logging:
 #  level:
